weekly temp spread chart, fix weekly temp chart cut off, update tech footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,15 +10,3 @@
   height: 250px;
   overflow: auto;
 }
-
-.tech-icons {
-  position: sticky;
-  bottom: 7px;
-  width: fit-content;
-  left: 100vw;
-  background: inherit;
-
-  a {
-    padding-left: 11px;
-  }
-}
